[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/EnemyWave.gd" type="Script" id=1]

[node name="EnemyWave" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn0" type="Position2D" parent="."]
position = Vector2( 256, -64 )

[node name="spawn1" type="Position2D" parent="."]
position = Vector2( 384, -64 )

[node name="spawn2" type="Position2D" parent="."]
position = Vector2( 512, -64 )
